--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -36,7 +36,27 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/real_estate_telegram_bot:latest
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/telegram_llm_streaming:latest
 
       - name: Log out from DockerHub
         run: docker logout
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: SSH into server and pull image
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ vars.SERVER_HOST }}
+          username: ${{ vars.SERVER_USER }}
+          key: ${{ vars.SSH_PRIVATE_KEY }}
+          script: |
+            current_container=$(docker ps --filter "ancestor=${{ vars.DOCKERHUB_USERNAME }}/telegram_llm_streaming:latest" --format "{{.Names}}")
+            if [ -n "$current_container" ]; then
+              docker stop $current_container
+              docker rm $current_container
+            fi
+            docker pull ${{ vars.DOCKERHUB_USERNAME }}/telegram_llm_streaming:latest
+            docker stop current_container_name || true
+            docker rm current_container_name || true
+            docker run -d --name current_container_name -p 80:80 ${{ vars.DOCKERHUB_USERNAME }}/telegram_llm_streaming:latest
