--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -19,11 +19,7 @@ jobs:
       - name: Create .env file
         run: |
           echo "BOT_TOKEN=${{ vars.BOT_TOKEN }}" >> .env
-          echo "DB_HOST=${{ vars.DB_HOST }}" >> .env
-          echo "DB_PORT=${{ vars.DB_PORT }}" >> .env
-          echo "DB_NAME=${{ vars.DB_NAME }}" >> .env
-          echo "DB_USER=${{ vars.DB_USER }}" >> .env
-          echo "DB_PASSWORD=${{ vars.DB_PASSWORD }}" >> .env
+          echo "FIREWORKS_API_KEY=${{ vars.FIREWORKS_API_KEY }}" >> .env
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
