--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -40,11 +40,12 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: logging
+        run: |
+          echo ${{ vars.SERVER_HOST }}
       - name: SSH into server and pull image
         uses: appleboy/ssh-action@master
         with:
-          run: |
-            echo ${{ vars.SERVER_HOST }}
           host: ${{ vars.SERVER_HOST }}
           username: ${{ vars.SERVER_USER }}
           password: ${{ vars.SSH_PASSWORD }}
